tests/fixtures/invalid/len_wrong_type.py
# len() not supported for type Int
print(len(42))
